--- a/thread-affair/index.html
+++ b/thread-affair/index.html
@@ -54,11 +54,12 @@
         </div>
         <!-- /.user-controls -->
 
-        <div class="header-cart">
-          <span class="cart-qty">3</span>
-          <i class="fas fa-shopping-cart icon"></i>
+
+
+        <div class="header-counters">
+
         </div>
-        <!-- /.header-cart -->
+        <!--  -->
       </section>
       <!-- /.header-controls -->
 
