pana la linia 142

--- a/monochrome/index.html
+++ b/monochrome/index.html
@@ -201,18 +201,15 @@
               >
             </a>
             <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-heart"></i>
-              </a>
+              </button>
 
-              <a
-                href=""
-                title=""
-              >
+
+
+              <button>
                 <i class="far fa-plus-square"></i>
+              </button>
               </a>
             </div>
             <!-- /.product-tile-controls -->
@@ -249,19 +246,13 @@
               >
             </a>
             <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-heart"></i>
-              </a>
+              </button>
 
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-plus-square"></i>
-              </a>
+              </button>
             </div>
             <!-- /.product-tile-controls -->
           </div>
@@ -297,19 +288,13 @@
               >
             </a>
             <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-heart"></i>
-              </a>
+              </button>
 
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-plus-square"></i>
-              </a>
+              </button>
             </div>
             <!-- /.product-tile-controls -->
           </div>
@@ -345,19 +330,13 @@
               >
             </a>
             <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-heart"></i>
-              </a>
+              </button>
 
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-plus-square"></i>
-              </a>
+              </button>
             </div>
             <!-- /.product-tile-controls -->
           </div>
@@ -403,19 +382,13 @@
               >
             </a>
             <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-heart"></i>
-              </a>
+              </button>
 
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-plus-square"></i>
-              </a>
+              </button>
             </div>
             <!-- /.product-tile-controls -->
           </div>
@@ -451,19 +424,13 @@
               >
             </a>
             <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-heart"></i>
-              </a>
+              </button>
 
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-plus-square"></i>
-              </a>
+              </button>
             </div>
             <!-- /.product-tile-controls -->
           </div>
@@ -499,19 +466,13 @@
               >
             </a>
             <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-heart"></i>
-              </a>
+              </button>
 
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-plus-square"></i>
-              </a>
+              </button>
             </div>
             <!-- /.product-tile-controls -->
           </div>
@@ -547,19 +508,13 @@
               >
             </a>
             <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-heart"></i>
-              </a>
+              </button>
 
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-plus-square"></i>
-              </a>
+              </button>
             </div>
             <!-- /.product-tile-controls -->
           </div>
@@ -633,19 +588,13 @@
               >
             </a>
             <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-heart"></i>
-              </a>
+              </button>
 
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-plus-square"></i>
-              </a>
+              </button>
             </div>
             <!-- /.product-tile-controls -->
           </div>
@@ -681,19 +630,13 @@
               >
             </a>
             <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-heart"></i>
-              </a>
+              </button>
 
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-plus-square"></i>
-              </a>
+              </button>
             </div>
             <!-- /.product-tile-controls -->
           </div>
@@ -729,19 +672,13 @@
               >
             </a>
             <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-heart"></i>
-              </a>
+              </button>
 
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-plus-square"></i>
-              </a>
+              </button>
             </div>
             <!-- /.product-tile-controls -->
           </div>
@@ -777,19 +714,13 @@
               >
             </a>
             <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-heart"></i>
-              </a>
+              </button>
 
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-plus-square"></i>
-              </a>
+              </button>
             </div>
             <!-- /.product-tile-controls -->
           </div>
@@ -846,19 +777,13 @@
               >
             </a>
             <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-heart"></i>
-              </a>
+              </button>
 
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-plus-square"></i>
-              </a>
+              </button>
             </div>
             <!-- /.product-tile-controls -->
           </div>
@@ -893,22 +818,18 @@
                 alt="MONOCHROME"
               >
             </a>
-            <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
-                <i class="far fa-heart"></i>
-              </a>
+            <button>
+              <i class="far fa-heart"></i>
+            </button>
 
-              <a
-                href=""
-                title=""
-              >
-                <i class="far fa-plus-square"></i>
-              </a>
-            </div>
-            <!-- /.product-tile-controls -->
+            <a
+              href=""
+              title=""
+            >
+              <i class="far fa-plus-square"></i>
+            </a>
+          </div>
+          <!-- /.product-tile-controls -->
           </div>
           <!-- /.product-image-container -->
 
@@ -942,19 +863,13 @@
               >
             </a>
             <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-heart"></i>
-              </a>
+              </button>
 
-              <a
-                href=""
-                title=""
-              >
+              <button>
                 <i class="far fa-plus-square"></i>
-              </a>
+              </button>
             </div>
             <!-- /.product-tile-controls -->
           </div>
@@ -990,19 +905,15 @@
               >
             </a>
             <div class="product-tile-controls">
-              <a
-                href=""
-                title=""
-              >
-                <i class="far fa-heart"></i>
-              </a>
 
-              <a
-                href=""
-                title=""
-              >
+              <button>
+                <i class="far fa-heart"></i>
+              </button>
+
+
+              <button>
                 <i class="far fa-plus-square"></i>
-              </a>
+              </button>
             </div>
             <!-- /.product-tile-controls -->
           </div>
