thread-affair update

--- a/monochrome/index.html
+++ b/monochrome/index.html
@@ -818,18 +818,17 @@
                 alt="MONOCHROME"
               >
             </a>
-            <button>
-              <i class="far fa-heart"></i>
-            </button>
+            <div class="product-tile-controls">
+              <button>
+                <i class="far fa-heart"></i>
+              </button>
 
-            <a
-              href=""
-              title=""
-            >
-              <i class="far fa-plus-square"></i>
-            </a>
-          </div>
-          <!-- /.product-tile-controls -->
+              <button>
+                <i class="far fa-plus-square"></i>
+              </button>
+              </a>
+            </div>
+            <!-- /.product-tile-controls -->
           </div>
           <!-- /.product-image-container -->
 
