--- a/app-contact-manager/index.html
+++ b/app-contact-manager/index.html
@@ -32,7 +32,7 @@
       <ul class="nav me-auto">
         <li class="nav-item btn-group">
           <button
-            class="btn btn-success"
+            class="btn btn-success add-contact-button"
             title="Add contact"
           >Add contact</button>
         </li>
@@ -48,7 +48,7 @@
         <input
           type="text"
           class="form-control"
-          placeholder="Search.."
+          placeholder="Search..."
           name="q"
         >
 
